tests/NormalTests/paczka1/fuzzy1/28606862.err
Error in line 3: c9HyDjjMJs S600 30,7
Error in line 14: c9HyDjjMJs A788 73,2
Error in line 21: a0GjNZ S600 92,1
Error in line 27: 7pqEL59IZJ S600 70,2
Error in line 31: 7pqEL59IZJ S821 29,2
